# stack

./: stack.cabal
scripts/release/: make-linux-releases.sh
src/Stack/: Build.hs  BuildPlan.hs  Config.hs  Constants.hs  Docker.hs  GhcPkg.hs  Ghci.hs  Options.hs  Package.hs  PackageDump.hs  SDist.hs  Setup.hs  Sig.hs  Types.hs  Upload.hs
src/Stack/Sig/: Archive.hs  Cabal.hs  Check.hs  Config.hs  Defaults.hs  Display.hs  Doc.hs  GPG.hs  Hackage.hs  Init.hs  Install.hs  List.hs  Mapping.hs  Sign.hs  Trust.hs  Types.hs  Update.hs
src/Stack/Sig/Cabal/: Parse.hs
src/Stack/Types/: Build.hs  BuildPlan.hs  Config.hs  Internal.hs  Package.hs  Sig.hs
src/System/Process/: Read.hs
src/main/: Main.hs
src/test/Stack/: PackageDumpSpec.hs
test/integration/: IntegrationSpec.hs
test/integration/tests/32-unlisted-module/: Main.hs
test/integration/tests/32-unlisted-module/files/: files.cabal
test/integration/tests/32-unlisted-module/files/src/: Lib.hs  Unlisted_FAIL.hs  Unlisted_OK.hs
